--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,6 +5,8 @@
     left: 0;
     z-index: 10;
 
+    display: none;
+
 }
 .nav{
     display: flex;
@@ -43,3 +45,22 @@
     border-bottom: 2px solid #fff;
     transition: 0.3s ease-in-out;
 }
+
+
+
+
+  
+  @media screen and (max-width: 992px) {
+
+  }
+  @media screen and (max-width: 768px) {
+
+  }
+  
+  @media screen and (max-width: 576px) {
+  }
+  
+
+  @media screen and (max-width: 350px) {
+
+  }
