--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -92,7 +92,7 @@
     .home_content{
         align-items: center;
         justify-content: center;
-        width: 1%
+        width: 3rem;
     }
     .home_content-text{
         width: 31rem;
